--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,5 +4,5 @@ JWT_SECRET = KJHAKFJDH43454354WFKJ11KJHKJN53546DAFOHAF
 JWT_EXPIRE = 5d
 COOKIE_EXPIRE = 5
 SMPT_SERVICE= smtp.gmail.com
-SMPT_MAIL = tariqjannat08@gmail.com
-SMPT_PASSWORD = znytbgwteacldmls
+SMPT_MAIL = 
+SMPT_PASSWORD = 
